<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/formAngka"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:text=""
        android:paddingRight="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="tes" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.125" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineMidLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.375" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineMidRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.625" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.875" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottom5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottom4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottom3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <Button
        android:id="@+id/clear"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_clear"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom5"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom5" />

    <Button
        android:id="@+id/div"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_operator"
        android:text="@string/div"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom5"
        app:layout_constraintLeft_toLeftOf="@id/guidelineRight"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom4"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_8"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom4"
        app:layout_constraintLeft_toLeftOf="@id/guidelineMidLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineMidLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_9"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom4"
        app:layout_constraintLeft_toLeftOf="@id/guidelineMidRight"
        app:layout_constraintRight_toRightOf="@id/guidelineMidRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom4" />

    <Button
        android:id="@+id/mul"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_operator"
        android:text="@string/mul"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom4"
        app:layout_constraintLeft_toLeftOf="@id/guidelineRight"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom3"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom3"
        app:layout_constraintLeft_toLeftOf="@id/guidelineMidLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineMidLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_6"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom3"
        app:layout_constraintLeft_toLeftOf="@id/guidelineMidRight"
        app:layout_constraintRight_toRightOf="@id/guidelineMidRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom3" />

    <Button
        android:id="@+id/sub"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_operator"
        android:text="@string/sub"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom3"
        app:layout_constraintLeft_toLeftOf="@id/guidelineRight"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom2"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom2"
        app:layout_constraintLeft_toLeftOf="@id/guidelineMidLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineMidLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom2"
        app:layout_constraintLeft_toLeftOf="@id/guidelineMidRight"
        app:layout_constraintRight_toRightOf="@id/guidelineMidRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom2" />

    <Button
        android:id="@+id/add"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_operator"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom2"
        app:layout_constraintLeft_toLeftOf="@id/guidelineRight"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom2" />


    <Button
        android:id="@+id/button0"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:background="@drawable/button_zero"
        android:paddingStart="20dp"
        android:text="@string/_0"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom1"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineMidLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom1"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/point"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_number"
        android:text="@string/point"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom1"
        app:layout_constraintLeft_toLeftOf="@id/guidelineMidRight"
        app:layout_constraintRight_toRightOf="@id/guidelineMidRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom1" />

    <Button
        android:id="@+id/equal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_operator"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom1"
        app:layout_constraintLeft_toLeftOf="@id/guidelineRight"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom1" />
</android.support.constraint.ConstraintLayout>